<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">SuraMovil</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="scanner_permission_rationale">Systems over Android 6.0 need to grant access to device locations in order to scan Bluetooth devices</string>
    <string name="open_gps">Open GPS</string>
    <string name="cancel">Medición completa</string>
    <string name="no_ble">Bluetooth is not supported on the device!</string>
    <string name="ok">Sure?</string>
    <string name="location_permission">Please allow APP to get location permissions, otherwise Bluetooth devices can not be searched!</string>
    <string name="device_list">Device list</string>
    <string name="not_support">Bluetooth is not supported.</string>
    <string name="unknown_device">Unknown device</string>
    <string name="connect">Connect</string>
    <string name="sync_time">Synchronization time</string>
    <string name="vibrate">Vibrant Bracelet</string>
    <string name="get_band_info">Get Bracelet information</string>
    <string name="battery">Electric quantity</string>
    <string name="open_hourly_measure">Opening whole point measurement</string>
    <string name="get_data">get data</string>
    <string name="clear_data">Removing Bracelet data</string>
    <string name="open_message">Open message notification</string>
    <string name="test_message">Test message notification</string>
    <string name="set_alarm_clock">set alarm</string>
    <string name="get_sleep_data">Getting Sleep Data (ID 52)</string>
    <string name="single_measure">MEASUREMENT</string>
    <string name="real_time_measure">REAL-TIME MEASUREMENT</string>
    <string name="one_button_measurement">One button measurement</string>
    <string name="get_real_heartrate">Continuous Heart Rate Hand Ring for Real-time Heart Rate Acquisition</string>
    <string name="turn_off_real_heartrate">Closing Continuous Heart Rate Bracelet for Real-time Heart Rate Acquisition</string>
    <string name="login_username" tools:ignore="MissingTranslation">Usuario</string>
    <string name="login_password" tools:ignore="MissingTranslation">Contraseña</string>
    <string name="direct_access" tools:ignore="MissingTranslation">Acceso directo</string>
    <string name="forgot_password" tools:ignore="MissingTranslation">Olvidé mi contraseña</string>
    <string name="login_btn_text" tools:ignore="MissingTranslation">Iniciar Sesión</string>
    <string name="register_btn_text" tools:ignore="MissingTranslation">Registrarme</string>
    <string name="register_heading" tools:ignore="MissingTranslation">Registro</string>
    <string name="register_username" tools:ignore="MissingTranslation">Ingrese el nombre de la cuenta</string>
    <string name="register_password" tools:ignore="MissingTranslation">Ingrese la contraseña de la cuenta</string>
    <string name="send_weather">* 发送天气</string>
    <string name="send_pic">* 发送图片</string>
    <string name="preference_file_key" tools:ignore="MissingTranslation">be4techSharedPrefs</string>
    <string name="loading" tools:ignore="MissingTranslation">Espere un momento, por favor</string>
    <string name="measure_all_loading" tools:ignore="MissingTranslation">Tomando Medición</string>
    <string name="pls_input_email" tools:ignore="MissingTranslation">Please enter the mail address</string>
    <string name="input_pwd" tools:ignore="MissingTranslation">Please enter the account password</string>
    <string name="loging" tools:ignore="MissingTranslation">Iniciar Sesión</string>
    <string name="conectar" tools:ignore="MissingTranslation">Conectar</string>

    <string name="conectarDespositivo" tools:ignore="MissingTranslation"> Conectar Dispositivo</string>


    <string name="login" tools:ignore="MissingTranslation">Registrar</string>
    <string name="measure_recently" tools:ignore="MissingTranslation">Última medición</string>
    <string name="search_device" tools:ignore="MissingTranslation">Encontrar dispositivo</string>
    <string name="disconnect_device" tools:ignore="MissingTranslation">Desconectar dispositivo</string>
    <string name="unbonded_device" tools:ignore="MissingTranslation">Desvincular dispositivo</string>


    <string name="Presión_Sanguinea" tools:ignore="MissingTranslation">Presión Sanguínea</string>
    <string name="Ritmo_Cardiaco" tools:ignore="MissingTranslation">Ritmo Cardíaco</string>
    <string name="Oximetria" tools:ignore="MissingTranslation">Oximetría</string>
    <string name="Temperatura" tools:ignore="MissingTranslation">Temperatura</string>


    <string name="alarma_titel" tools:ignore="MissingTranslation">Se activó la siguiente alarma: </string>
    <string name="alarma_desc" tools:ignore="MissingTranslation">Por favor siga este procedimiento: </string>

    <string name="register_firstname" tools:ignore="MissingTranslation">Ingrese su nombre</string>
    <string name="register_lastname" tools:ignore="MissingTranslation">Ingrese su apellido</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
